# mcp-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db_mcp_server.py  fs_mcp_server.py  llm_utils.py  logger_utils.py  mcp_client.py  rag_mcp_server.py  run_all.sh  search_mcp_server.py
